--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
 			<artifactId>spring-security-taglibs</artifactId>
 			<version>5.3.13.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope><!-- -->
+			<optional>true</optional>
+		</dependency>
 
 
 	</dependencies>
