--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=root
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=create
+spring.mvc.hiddenmethod.filter.enabled=true
